--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
-    "chart.js": "^4.5.0"
+    "chart.js": "^4.5.0",
+    "dotenv": "^17.2.1",
+    "octokit": "^5.0.3"
   }
 }
