--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "noEmit": true,
+        "allowImportingTsExtensions": true,
         "target": "es5",
         "module": "commonjs",
         "strict": true,
